--- a/AIUApp/templates/homepage.html
+++ b/AIUApp/templates/homepage.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Welcome to AIUDevTandems</h1>
-    
-</body>
-</html>
+{% extends 'main.html' %}
+{% block content %}
+<h1>AIU DEVTANDEMS HOME PAGE</h1>
+{% endblock %}
