--- a/AIUApp/templates/room.html
+++ b/AIUApp/templates/room.html
@@ -1,4 +1,7 @@
 {% extends 'main.html' %}
+
+{% block title %} DEV ROOMS {% endblock %}
+
 {% block content %}
 <h1>AIU DEVTANDEMS ROOMS</h1>
 {% endblock %}
