--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AIUDevTandems</title>
+    <title>{% block title %} AIU DEVTANDEMS {% endblock %}</title>
     <link rel="icon" href="{% static 'images/aiulogo.png' %}" type="image/x-icon">
 
 </head>
