--- a/AIUApp/templates/AIUApp/homepage.html
+++ b/AIUApp/templates/AIUApp/homepage.html
@@ -6,8 +6,13 @@
     <div>
         {% for room in rooms %}
             <div>
-                <h5>{{ room.id }} -- <a href="/room/{{room.id}}"> {{ room.name }}</a> </h5>
+                <h5>{{ room.id }} -- <a href="{% url 'room' room.id %}"> {{ room.name }}</a> </h5>
             </div>
+
+        {% empty %}
+        <div>
+            <h3>No rooms Found</h3>
+        </div>
         {% endfor %}
     </div>
 </div>
