--- a/AIUApp/templates/AIUApp/homepage.html
+++ b/AIUApp/templates/AIUApp/homepage.html
@@ -3,6 +3,8 @@
 <h1>AIU DEVTANDEMS HOME PAGE</h1>
 
 <div>
+    <a href="{% url 'create-room'%}">Create Room</a><br>
+
     <div>
         {% for room in rooms %}
             <div>
