--- a/AIUApp/templates/AIUApp/homepage.html
+++ b/AIUApp/templates/AIUApp/homepage.html
@@ -1,12 +1,36 @@
 {% extends 'main.html' %}
 {% block content %}
 <h1>AIU DEVTANDEMS HOME PAGE</h1>
+<style>
+    .home-container{
+        display: grid;
+        grid-template-columns: 1fr 3fr; /*specifies how many fractions of the website page the grids are going to take up*/
+    }
 
-<div>
-    <a href="{% url 'create-room'%}">Create Room</a><br><br>
+</style>
 
+<div class ="home-container">
     <div>
-        {% for room in rooms %}
+        <h3>Browse Topics</h3>
+        <hr>
+        <div>
+            <a href="{% url 'home' %}">All Topics</a>
+        </div>
+        {% for topic in topics %}
+        <div>
+            <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+        </div>
+
+        {% empty %}
+
+        {% endfor%}
+
+    </div>
+    <div>
+        <h5>{{room_count}} rooms available</h5>
+        <a href="{% url 'create-room'%}">Create Room</a><br><br>
+        <div>
+            {% for room in rooms %}
             <div>
                 <a href="{% url 'updateroom' room.id %}">Update Room</a>&nbsp;&nbsp;
                 <a href="{% url 'deleteroom' room.id %}">Delete Room</a><br>
@@ -15,13 +39,14 @@
                 <small>{{room.topic.name}}</small>
                 <hr>
             </div>
-
-        {% empty %}
-        <div>
-            <h3>No rooms Found</h3>
+            {% empty %}
+            <div>
+                <h3>No rooms Found</h3>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
+    
 </div>
 
 {% endblock %}
