--- a/templates/main.html
+++ b/templates/main.html
@@ -10,8 +10,12 @@
 </head>
 <body>
     {% include 'navbar.html' %}
+    {% if messages %}
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
 
-
+    {% endif %}
     {% block content %}
     
 
