user login functionality

--- a/AIUApp/templates/AIUApp/login_register.html
+++ b/AIUApp/templates/AIUApp/login_register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-    <form methhod="post"action="">
+    <form method="post"action="">
         {% csrf_token %}
 
         <label>Username: </label>
