--- a/AIUApp/templates/AIUApp/homepage.html
+++ b/AIUApp/templates/AIUApp/homepage.html
@@ -32,9 +32,11 @@
         <div>
             {% for room in rooms %}
             <div>
+                {% if request.user == room.host %}
                 <a href="{% url 'updateroom' room.id %}">Update Room</a>&nbsp;&nbsp;
                 <a href="{% url 'deleteroom' room.id %}">Delete Room</a><br>
                 <span>@{{room.host.username}}</span>
+                {% endif %}
                 <h5>{{ room.id }} -- <a href="{% url 'room' room.id %}"> {{ room.name }}</a> </h5>
                 <small>{{room.topic.name}}</small>
                 <hr>
