--- a/AIUApp/templates/AIUApp/login_register.html
+++ b/AIUApp/templates/AIUApp/login_register.html
@@ -14,6 +14,16 @@
         <input type="submit" value="Login">
 
     </form>
+    
+</div>
+<div>
+    <form method="post"action="">
+        {% csrf_token %}
+        
+        <input type="submit" value="Register">
+
+    </form>
+
 </div>
 
 {% endblock %}
