--- a/AIUApp/templates/AIUApp/login_register.html
+++ b/AIUApp/templates/AIUApp/login_register.html
@@ -1,6 +1,8 @@
 {% extends 'main.html' %}
 
 {% block content %}
+
+{% if page == 'login' %}
 <div>
     <form method="post"action="">
         {% csrf_token %}
@@ -14,16 +16,23 @@
         <input type="submit" value="Login">
 
     </form>
+
+    <p>Haven't Signed up yet?</p>
+    <a href="{% url 'register' %}">Sign Up</a>
     
 </div>
+{% else %}
 <div>
     <form method="post"action="">
         {% csrf_token %}
-        
+        {{form.as_p}}
         <input type="submit" value="Register">
 
     </form>
+    <p>Already Signed Up?</p>
+    <a href="{% url 'login' %}">Log in</a>
 
 </div>
+{% endif %}
 
 {% endblock %}
