--- a/AIUApp/templates/AIUApp/room.html
+++ b/AIUApp/templates/AIUApp/room.html
@@ -6,5 +6,27 @@
 <h1>AIU DEVTANDEMS ROOMS</h1>
 <h2>{{ room.name }}</h2>
 
+<p>{{ room.description }}</p>
+
+<div class="comment-wrapper">
+    <h3>Conversation</h3>
+    <hr>
+    {% for message in room_messages %}
+    <div>
+        <small>@{{ message.user}}  {{ message.created|timesince }} ago</small>
+        <p>{{ message.body }}</p>
+        <hr>
+    </div>
+    {% endfor %}
+{% if request.user.is_authenticated %}
+    <div class="comment-form">
+        <form action="" method="post">
+            {% csrf_token %}
+            <input type="text" name="body"placeholder="Write Your Message here...">
+        </form>
+    </div>
+{% endif %}
+
+</div>
 
 {% endblock %}
