--- a/AIUApp/templates/AIUApp/homepage.html
+++ b/AIUApp/templates/AIUApp/homepage.html
@@ -4,9 +4,8 @@
 <style>
     .home-container{
         display: grid;
-        grid-template-columns: 1fr 3fr; /*specifies how many fractions of the website page the grids are going to take up*/
+        grid-template-columns: 1fr 3fr 1fr; /*specifies how many fractions of the website page the grids are going to take up*/
     }
-
 </style>
 
 <div class ="home-container">
@@ -47,6 +46,22 @@
             </div>
             {% endfor %}
         </div>
+    </div>
+    <div>
+        <h3>Recent Activity</h3>
+        <hr>
+        {% for message in room_messages %}
+        <div>
+            <small>@{{message.user}} {{message.created|timesince}}</small>
+            <small>replied to "{{message.room}}"</small>
+
+            <p>{{message}}</p>
+            {% if request.user == message.user %}
+                <a href="{% url 'delete-message' message.id %}">Delete</a>
+                {% endif %}
+                <hr>
+        </div>        
+        {% endfor %}
     </div>
     
 </div>
