--- a/templates/main.html
+++ b/templates/main.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %} AIU DEVTANDEMS {% endblock %}</title>
     <link rel="icon" href="{% static 'images/aiulogo.png' %}" type="image/x-icon">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  </head>
 
-</head>
-<body>
+  <body>
+    
     {% include 'navbar.html' %}
-
     {% if messages %}
       {% for message in messages %}
         <li>{{ message }}</li>
       {% endfor %}
 
     {% endif %}
-    
+
     {% block content %}
     
 
     {% endblock %}
-</body>
+    
+    <script src="{% static 'js/script.js' %}"></script>
+  </body>
 </html>
