--- a/AIUApp/templates/AIUApp/delete.html
+++ b/AIUApp/templates/AIUApp/delete.html
@@ -1,9 +1,16 @@
 {% extends 'main.html' %}
 
 {% block content %}
+<style>
+    .object{
+        font-weight: 900;
+        color: #ff0000;
+    }
+    
+</style>
 <form action="" method="post">
     {% csrf_token %}
-    <p>Are you sure you want to delete this "{{obj}}"?</p>
+    <p>Are you sure you want to delete this <span class="object">"{{obj}}?"</span></p>
     <a href="{{request.META.HTTP_REFERER}}">Cancel</a>
     <input type="submit" value="Confirm">
 </form>
