--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <header class="header header--loggedIn">
     <div class="container">
       <a href="{% url 'home' %}" class="header__logo">
-        <img src="{% static 'images/logo.svg' %}" />
+        <img src="{% static 'images/aiulogo.png' %}" />
         <h1>AIU DEVTANDEMS</h1>
       </a>
       <form class="header__search" action="{% url 'home' %}" method="get">
