completed Front-end designs

--- a/AIUApp/templates/AIUApp/feed_component.html
+++ b/AIUApp/templates/AIUApp/feed_component.html
@@ -10,10 +10,10 @@
         <div class="avatar avatar--small">
           <img src="https://randomuser.me/api/portraits/women/11.jpg" />
         </div>
-        <span>@{{room.host.username}}</span>
+        <span class="author">@{{room.host.username}}</span>
       </a>
       <div class="roomListRoom__actions">
-        <span>{{room.created|timesince}}</span>
+        <span>{{room.created|timesince}} ago</span>
       </div>
     </div>
     <div class="roomListRoom__content">
