--- a/AIUApp/templates/AIUApp/room.html
+++ b/AIUApp/templates/AIUApp/room.html
@@ -118,6 +118,7 @@
           </div>
           <div class="room__message">
             <form action="#"method="post">
+              {% csrf_token %}
               <input name="body" placeholder="Write your message here..." />
             </form>
           </div>
