--- a/AIUApp/templates/AIUApp/update_user_profile.html
+++ b/AIUApp/templates/AIUApp/update_user_profile.html
@@ -1,15 +1,10 @@
 {% extends 'main.html' %}
 
+{% block title %} AIUDEVTANDEMS User Profile {% endblock %}
+
 {% block content %}
-<style>
-    .object{
-        font-weight: 900;
-        color: #fff;
-        font-size: 2rem;
-    }
-    
-</style>
-    <main class="delete-item layout">
+
+    <main class="update-account layout">
         <div class="container">
             <div class="layout__box">
                 <div class="layout__boxHeader">
@@ -23,24 +18,26 @@
                                 </path>
                             </svg>
                         </a>
-                        <h3>Back</h3>
+                        <h3>Edit your profile</h3>
                     </div>
                 </div>
                 <div class="layout__body">
                     <form class="form" action="#"method="post">
                         {% csrf_token %}
+                        {% for field in form%}
                         <div class="form__group">
-                            <p>Are you sure you want to delete <span class="object">"{{obj}}?"</span>?</p>
+                            <label for="profile_pic">{{field.label}}</label>
+                            {{field}}
                         </div>
-
-                        <div class="for__group">
-                            <input class="btn btn--main" type="submit" value="Confirm" />
+                        {% endfor %}
+                        <div class="form__action">
+                            <a class="btn btn--dark" href="{{request.META.HTTP_REFERER}}">Cancel</a>
+                            <button class="btn btn--main" type="submit">Update</button>
                         </div>
-
                     </form>
                 </div>
             </div>
         </div>
+      </div>
     </main>
-    <script src="script.js"></script>
 {% endblock %}
