--- a/AIUApp/templates/AIUApp/feed_component.html
+++ b/AIUApp/templates/AIUApp/feed_component.html
@@ -8,7 +8,7 @@
         <span>@Unknown User</span>
     {% endif %}
         <div class="avatar avatar--small">
-          <img src="https://randomuser.me/api/portraits/women/11.jpg" />
+          <img src="{{room.host.avatar.url}}" />
         </div>
         <span class="author">@{{room.host.username}}</span>
       </a>
