--- a/static/css/aiu.css
+++ b/static/css/aiu.css
@@ -423,18 +423,19 @@ a {
 /*========== Layout Box ==========*/
 
 .layout__box {
-  width: 90%;
-  max-width: 48rem;
-  min-height: 40rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -46%);
-  background-color: #2f3037;
-  border-radius: 1rem;
-  box-shadow: 1px 1px 6px 3px rgba(0, 0, 0, 0.1);
-  overflow-y: scroll;
-}
+    width: 90%;
+    max-width: 48rem;
+    min-height: 40rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-20%);
+    background-color: #2f3037;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 6px 3px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+  }
+
 
 .layout__boxHeader {
   display: flex;
@@ -607,6 +608,7 @@ a {
   font-size: 1.3rem;
   font-weight: 700;
   letter-spacing: 1px;
+  color: #fff;
 }
 
 .topics-page a:hover {
@@ -921,6 +923,17 @@ a {
 .profile-page .roomList__header h2 {
   color: #fff;
   font-weight: 700;
+}
+.socials {
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
+  gap: 2rem;    
+}
+.socials a {
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  font-size: 2rem;
 }
 
 /*==============================
