--- a/templates/main.html
+++ b/templates/main.html
@@ -9,6 +9,10 @@
     <link rel="icon" href="{% static 'images/aiulogo.png' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/aiu-1.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css"/>
+    <!-- Default theme -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/default.min.css"/>
 
   </head>
 
@@ -26,7 +30,7 @@
     
 
     {% endblock %}
-    
     <script src="{% static 'js/script.js' %}"></script>
+    
   </body>
 </html>
